--- a/album/templates/album/web/album_templates/k_chunyu.html
+++ b/album/templates/album/web/album_templates/k_chunyu.html
@@ -10,13 +10,13 @@
             background-color: white
         }
 
-        .container {
+        #container {
             position: relative;
             width: 500px;
             height: 815px;
             overflow: hidden;
         }
-        .container > img,.container > div {
+        #container > img,#container > div {
             position: absolute;
         }
 
@@ -839,7 +839,7 @@
 
 </style>
 
-        <div class='container'>
+        <div id='container'>
             <div id='bg1' class='bg'>
                 <img src='http://wangjianxun1.test.upcdn.net/img/album_template/k_chunyu/f867c504f5.jpg'/>
                 <img id='yun' src='http://wangjianxun1.test.upcdn.net/img/album_template/k_chunyu/b525361c11.jpg'/>
