--- a/album/templates/album/web/album_templates/k_liunian.html
+++ b/album/templates/album/web/album_templates/k_liunian.html
@@ -9,13 +9,13 @@
             background-color: white
         }
 
-        .container {
+        #container {
             position: relative;
             width: 500px;
             height: 815px;
             overflow: hidden;
         }
-        .container > img,.container > div {
+        #container > img,#container > div {
             position: absolute;
         }
 
@@ -623,7 +623,7 @@
     </style>
 
     <body>
-        <div class='container'>
+        <div id='container'>
             <img src='http://wangjianxun1.test.upcdn.net/img/album_template/k_liunian/49826f93f6.jpg'>
 
             <div id='kuang'>
