--- a/album/templates/album/web/album_templates/k_xiaolu.html
+++ b/album/templates/album/web/album_templates/k_xiaolu.html
@@ -1618,7 +1618,7 @@
 
     </style>
     <body>
-        <div id='k_container'>
+        <div id='container'>
             <img src="http://wangjianxun1.test.upcdn.net/img/album_template/k_xiaolu/16b5fcea19.jpg">
             <div id='hudie1'>
                 <div id='hudie1_left' class='hudie_left'>
