--- a/album/templates/album/web/album_templates/k_fuqinjie.html
+++ b/album/templates/album/web/album_templates/k_fuqinjie.html
@@ -9,13 +9,13 @@
             background-color: white
         }
 
-        .container {
+        #container {
             position: relative;
             width: 500px;
             height: 815px;
             overflow: hidden;
         }
-        .container > img,.container > div {
+        #container > img,#container > div {
             position: absolute;
         }
 
@@ -707,7 +707,7 @@
         }
 
     </style>
-        <div class='container'>
+        <div id='container'>
             <img src='http://wangjianxun1.test.upcdn.net/img/album_template/k_fuqinjie/63ef090c92.jpg'/>
             <img id='baozhi' src='http://wangjianxun1.test.upcdn.net/img/album_template/k_fuqinjie/7fa4d32dc6.jpg'>
 
