--- a/album/templates/album/web/album_templates/k_huanlesong.html
+++ b/album/templates/album/web/album_templates/k_huanlesong.html
@@ -9,13 +9,13 @@
             background-color: white
         }
 
-        .container {
+        #container {
             position: relative;
             width: 500px;
             height: 815px;
             overflow: hidden;
         }
-        .container > img,.container > div {
+        #container > img,#container > div {
             position: absolute;
         }
 
@@ -767,7 +767,7 @@
         }
 
     </style>
-        <div class='container'>
+        <div id='container'>
             <img src="http://wangjianxun1.test.upcdn.net/img/album_template/k_huanlesong/47908073ae.jpg">
 
             <img id='title_bg' src='http://wangjianxun1.test.upcdn.net/img/album_template/k_huanlesong/41cdc24b11.jpg'>
