--- a/album/templates/album/web/album_templates/k_mama.html
+++ b/album/templates/album/web/album_templates/k_mama.html
@@ -9,13 +9,13 @@
 			background-color: white
 		}
 
-		.container {
+		#container {
 			position: relative;
 			width: 500px;
     		height: 815px;
 			overflow: hidden;
 		}
-		.container > img,.container > div {
+		#container > img,#container > div {
 			position: absolute;
 		}
 
@@ -723,7 +723,7 @@
 	</style>
 
 	<body>
-		<div class='container'>
+		<div id='container'>
 			<img src='http://wangjianxun1.test.upcdn.net/img/album_template/k_mama/d5712fa150.jpg'/>
 			<img id='shuzhi' src='http://wangjianxun1.test.upcdn.net/img/album_template/k_mama/63fdab4fcc.jpg'/>
 			<img id='left_shitou' src='http://wangjianxun1.test.upcdn.net/img/album_template/k_mama/ef74b206a5.jpg'/>
